Use CMake as primary build system via scikit-build (#215)
* general except clause in module_available
* switched to scikit-build as build system
* update versioneer
* remove legacy dependency specifiers from setup.py
* use pytest xdist with 2 jobs

--- a/deeptime/basis/CMakeLists.txt
+++ b/deeptime/basis/CMakeLists.txt
@@ -1,8 +1,4 @@
-project(deeptime_basis CXX)
+project(_basis_bindings CXX)
 
 set(SRC src/basis_bindings.cpp)
-pybind11_add_module(_basis_bindings ${SRC})
-target_link_libraries(_basis_bindings PUBLIC deeptime::deeptime)
-if(OpenMP_FOUND)
-    target_link_libraries(_basis_bindings PUBLIC OpenMP::OpenMP_CXX)
-endif()
+register_pybind_module(${PROJECT_NAME} ${SRC})
