--- a/deeptime/covariance/util/covar_c/CMakeLists.txt
+++ b/deeptime/covariance/util/covar_c/CMakeLists.txt
@@ -1,5 +1,4 @@
-project(covartools CXX)
+project(_covartools CXX)
 
 set(SRC covartools.hpp covartools.cpp)
-pybind11_add_module(${PROJECT_NAME} ${SRC})
-target_link_libraries(${PROJECT_NAME} PUBLIC deeptime::deeptime)
+register_pybind_module(${PROJECT_NAME} ${SRC})
