--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,19 @@ deep-learning = ['pytorch']
 plotting = ['matplotlib', 'networkx']
 
 [build-system]
-requires = ["toml", "setuptools", "wheel", "numpy>=1.14", "scipy", "Cython", "pybind11"]
+requires = [
+    "setuptools>=42",
+    "wheel",
+    "scikit-build>=0.13",
+    "cython",
+    "pybind11>=2.9.0",
+    "numpy>=1.14",
+    "cmake>=3.22",
+    "toml",
+    "scipy",
+    "ninja; platform_system!='Windows'"
+]
+build-backend = "setuptools.build_meta"
 
 [tool.pytest.ini_options]
 filterwarnings = ["once", "ignore::UserWarning"]
