--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -1,18 +1,13 @@
-numpy==1.21.4; python_version=="3.7"
-numpy==1.22.0; python_version>="3.8"
 importlib_metadata; python_version<"3.8"
 typing_extensions; python_version<"3.8"
-scipy==1.7.2
-pybind11==2.8.1
-scikit-learn==1.0.1
-threadpoolctl==3.0.0
+pybind11==2.9.1
 torch>=1.10.0; python_version<"3.10"
 matplotlib
 
-pytest==6.2.5
-pytest-cov
+pytest==7.1.1
+pytest-cov==3.0.0
 pytest-faulthandler==2.0.1
 pytest-sugar==0.9.4
-pytest-xdist
-flaky
+pytest-xdist==2.5.0
+flaky==3.7.0
 tqdm
