--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ keywords = [
 ]
 requires-python = ">= 3.7"
 dependencies = ['numpy', 'scipy', 'scikit-learn', 'threadpoolctl']
+dynamic = ['version']
 
 [project.urls]
 homepage = "https://deeptime-ml.github.io"
