--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,9 @@ keywords = [
     "markov-model", "hidden-markov-model", "time-series-analysis", "covariance-estimation",
     "koopman-operator", "coherent-set-detection"
 ]
+authors = [
+    {name = 'Moritz Hoffmann', email = 'moritz.hoffmann@fu-berlin.de'},
+]
 requires-python = ">= 3.7"
 dependencies = ['numpy', 'scipy', 'scikit-learn', 'threadpoolctl']
 dynamic = ['version']
