--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -1,7 +1,7 @@
 importlib_metadata; python_version<"3.8"
 typing_extensions; python_version<"3.8"
 pybind11==2.9.2
-torch>=1.12.0; python_version<"3.10"
+torch>=1.12.0
 matplotlib
 pint
 networkx
