--- a/devtools/setup+build+test.yml
+++ b/devtools/setup+build+test.yml
@@ -1,7 +1,3 @@
-variables:
-- name: PYTHONFAULTHANDLER
-  value: 1
-
 steps:
 - template: checkout.yml
 
@@ -13,6 +9,8 @@ steps:
 
 - script: nox -s "tests-$(python.version)" -- cov numprocesses=2
   displayName: 'Run tests'
+  env:
+    PYTHONFAULTHANDLER: 1
 
 - script: nox -s "tests-$(python.version)" --reuse-existing-virtualenvs -- cpp
   displayName: 'Run C++ tests'
