--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -1,14 +1,12 @@
 pybind11==2.9.2
 torch>=1.12.0; platform_system!="Darwin" or python_version!="3.8"
-torch<1.12.0; platform_system=="Darwin" and python_version=="3.8"
-matplotlib
-pint
-networkx
+torch!=1.12.0; platform_system=="Darwin" and python_version=="3.8"
+matplotlib==3.5.2
+pint==0.19.2
+networkx==2.8.4
 
 pytest==7.1.2
 pytest-cov==3.0.0
-pytest-faulthandler==2.0.1
-pytest-sugar==0.9.4
 pytest-xdist==2.5.0
 flaky==3.7.0
-tqdm
+tqdm==4.64.0
