update azure images

--- a/devtools/azure-pipelines-conda.yml
+++ b/devtools/azure-pipelines-conda.yml
@@ -1,7 +1,7 @@
 jobs:
 - job: 'Linux_with_conda'
   pool:
-    vmImage: 'Ubuntu-18.04'
+    vmImage: 'Ubuntu-22.04'
   steps:
     - bash: echo "##vso[task.prependpath]$CONDA/bin"
       displayName: Add conda to PATH
@@ -10,7 +10,7 @@ jobs:
 
 - job: 'MacOS_with_conda'
   pool:
-    vmImage: 'macOS-1015'
+    vmImage: 'macOS-10-12'
   steps:
     - bash: echo "##vso[task.prependpath]$CONDA/bin"
       displayName: Add conda to PATH
