--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -1,6 +1,5 @@
 pybind11==2.9.2
-torch>=1.12.0; platform_system!="Darwin" or python_version!="3.8"
-torch!=1.12.0; platform_system=="Darwin" and python_version=="3.8"
+torch>=1.12.0
 matplotlib==3.5.2
 pint==0.19.2
 networkx==2.8.4
