--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,14 +41,27 @@ plotting = ['matplotlib', 'networkx']
 units = ['pint>=0.20']
 tests = [
     'torch>=1.12.0; platform_system!="Darwin" or python_version!="3.8"',
-    'matplotlib==3.5.2',
-    'pint==0.20',
     'pytest==7.1.2',
     'pytest-cov==3.0.0',
     'coverage[toml]',
     'pytest-xdist==2.5.0',
     'flaky==3.7.0',
     'tqdm==4.64.0'
+]
+docs = [
+    "sphinx",
+    "nbsphinx",
+    "sphinxcontrib-bibtex",
+    "matplotlib",
+    "networkx",
+    "sphinxcontrib-katex",
+    "sphinx-gallery",
+    "torch",
+    "memory_profiler",
+    "mdshare",
+    "nbconvert",
+    "jupyter",
+    "tqdm"
 ]
 
 [build-system]
