--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,13 +40,17 @@ deep-learning = ['pytorch']
 plotting = ['matplotlib', 'networkx']
 units = ['pint>=0.20']
 tests = [
-    'torch>=1.12.0; platform_system!="Darwin" or python_version!="3.8"',
+    'torch>=1.12.0; platform_system!="Darwin" or python_version!="3.11"',
     'pytest==7.1.2',
     'pytest-cov==3.0.0',
     'coverage[toml]',
     'pytest-xdist==2.5.0',
     'flaky==3.7.0',
-    'tqdm==4.64.0'
+    'tqdm==4.64.0',
+    "cython>=0.29.30",
+    "pybind11>=2.10.1",
+    "cmake>=3.24",
+    "ninja; platform_system!='Windows'"
 ]
 docs = [
     "sphinx",
