--- a/devtools/conda-recipe/meta.yaml
+++ b/devtools/conda-recipe/meta.yaml
@@ -13,7 +13,7 @@ requirements:
   build:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
-    - versioneer
+    - versioneer ==0.28
 
   host:
     - python
@@ -26,6 +26,7 @@ requirements:
     - numpy >=1.14
     - pybind11 >=2.9.0
     - scikit-build
+    - versioneer ==0.28
     - llvm-openmp  # [osx]
     - libgomp  # [linux]
 
