--- a/devtools/azure-pipelines-cibuildwheel.yml
+++ b/devtools/azure-pipelines-cibuildwheel.yml
@@ -1,6 +1,9 @@
 trigger:
-  branches:
+  tags:
     include:
+      - '*'
+  branches:
+    exclude:
       - main
 
 jobs:
@@ -8,14 +11,8 @@ jobs:
     pool: { vmImage: 'Ubuntu-22.04' }
     strategy:
       matrix:
-        Python38:
-          python.version: '3.8'
-        Python39:
-          python.version: '3.9'
         Python310:
           python.version: '3.10'
-        Python311:
-          python.version: '3.11'
     steps:
       - task: UsePythonVersion@0
       - bash: |
@@ -32,14 +29,8 @@ jobs:
     pool: { vmImage: 'macOS-12' }
     strategy:
       matrix:
-        Python38:
-          python.version: '3.8'
-        Python39:
-          python.version: '3.9'
         Python310:
           python.version: '3.10'
-        Python311:
-          python.version: '3.11'
     steps:
       - task: UsePythonVersion@0
       - bash: |
@@ -56,14 +47,8 @@ jobs:
     pool: { vmImage: 'windows-2019' }
     strategy:
       matrix:
-        Python38:
-          python.version: '3.8'
-        Python39:
-          python.version: '3.9'
         Python310:
           python.version: '3.10'
-        Python311:
-          python.version: '3.11'
     steps:
       - task: UsePythonVersion@0
       - bash: |
