--- a/devtools/azure-pipelines-cibuildwheel.yml
+++ b/devtools/azure-pipelines-cibuildwheel.yml
@@ -12,11 +12,12 @@ jobs:
     variables:
       CIBW_BUILD: cp3{8,9,10,11}-manylinux_x86_64
     steps:
+      - template: checkout.yml
       - task: UsePythonVersion@0
         inputs:
-          versionSpec: '3.8'
+          versionSpec: '3.10'
           architecture: 'x64'
-        displayName: Use Python 3.8
+        displayName: Use Python 3.10
       - bash: |
           set -o errexit
           python3 -m pip install --upgrade pip
@@ -39,11 +40,12 @@ jobs:
         arm64:
           arch: 'arm64'
     steps:
+      - template: checkout.yml
       - task: UsePythonVersion@0
         inputs:
-          versionSpec: '3.8'
+          versionSpec: '3.10'
           architecture: 'x64'
-        displayName: Use Python 3.8
+        displayName: Use Python 3.10
       - bash: |
           set -o errexit
           python3 -m pip install --upgrade pip
@@ -59,11 +61,12 @@ jobs:
     variables:
       CIBW_BUILD: cp3{8,9,10,11}-win_amd64
     steps:
+      - template: checkout.yml
       - task: UsePythonVersion@0
         inputs:
-          versionSpec: '3.8'
+          versionSpec: '3.10'
           architecture: 'x64'
-        displayName: Use Python 3.8
+        displayName: Use Python 3.10
       - bash: |
           set -o errexit
           python -m pip install --upgrade pip
