--- a/azure-cibuildwheel.yml
+++ b/azure-cibuildwheel.yml
@@ -3,6 +3,7 @@ jobs:
     pool: { vmImage: 'Ubuntu-22.04' }
     variables:
       CIBW_BUILD: cp3{8,9,10,11}-manylinux_x86_64
+      CIBW_BUILD_VERBOSITY: 2
     steps:
       - template: devtools/cibuildwheel.yml
 
