--- a/devtools/azure-pipelines-conda.yml
+++ b/devtools/azure-pipelines-conda.yml
@@ -10,12 +10,12 @@ jobs:
 
 - job: 'MacOS_with_conda'
   pool:
-    vmImage: 'macOS-13'
+    vmImage: 'macOS-latest'
   steps:
     - bash: echo "##vso[task.prependpath]$CONDA/bin"
       displayName: Add conda to PATH
-    #- bash: sudo chown -R $USER $CONDA
-    #  displayName: Take ownership of conda installation
+    - bash: sudo chown -R $USER $CONDA
+      displayName: Take ownership of conda installation
     - template: checkout.yml
     - template: conda-setup+build.yml
 
@@ -23,10 +23,7 @@ jobs:
   pool:
     vmImage: 'windows-2019'
   steps:
-    - task: BatchScript@1
-      inputs:
-        filename: "$(CONDA)\\Scripts\\activate.bat"
-        modifyEnvironment: True
+    - powershell: Write-Host "##vso[task.prependpath]$env:CONDA\Scripts"
       displayName: Add conda to PATH
     - template: checkout.yml
     - template: conda-setup+build.yml
