--- a/devtools/azure-pipelines-conda.yml
+++ b/devtools/azure-pipelines-conda.yml
@@ -1,32 +1,29 @@
 jobs:
-- job: 'Linux_with_conda'
-  pool:
-    vmImage: 'Ubuntu-22.04'
-  steps:
-    - bash: echo "##vso[task.prependpath]$CONDA/bin"
-      displayName: Add conda to PATH
-    - template: checkout.yml
-    - template: conda-setup+build.yml
+  - job: 'Linux_with_conda'
+    pool:
+      vmImage: 'Ubuntu-22.04'
+    steps:
+      - bash: echo "##vso[task.prependpath]$CONDA/bin"
+        displayName: Add conda to PATH
+      - template: checkout.yml
+      - template: conda-setup+build.yml
 
-- job: 'MacOS_with_conda'
-  pool:
-    vmImage: 'macOS-13'
-  steps:
-    - bash: echo "##vso[task.prependpath]$CONDA/bin"
-      displayName: Add conda to PATH
-    #- bash: sudo chown -R $USER: $CONDA
-    #  displayName: Take ownership of conda installation
-    - template: checkout.yml
-    - template: conda-setup+build.yml
+  - job: 'MacOS_with_conda'
+    pool:
+      vmImage: 'macOS-latest'
+    steps:
+      - bash: echo "##vso[task.prependpath]$CONDA/bin"
+        displayName: Add conda to PATH
+      - bash: sudo chown -R $USER $CONDA
+        displayName: Take ownership of conda installation
+      - template: checkout.yml
+      - template: conda-setup+build.yml
 
-- job: 'Windows_with_conda'
-  pool:
-    vmImage: 'windows-2019'
-  steps:
-    - task: BatchScript@1
-      inputs:
-        filename: "$(CONDA)\\Scripts\\activate.bat"
-        modifyEnvironment: True
-      displayName: Add conda to PATH
-    - template: checkout.yml
-    - template: conda-setup+build.yml
+  - job: 'Windows_with_conda'
+    pool:
+      vmImage: 'windows-2019'
+    steps:
+      - powershell: Write-Host "##vso[task.prependpath]$env:CONDA\Scripts"
+        displayName: Add conda to PATH
+      - template: checkout.yml
+      - template: conda-setup+build.yml
