--- a/devtools/azure-pipelines-conda.yml
+++ b/devtools/azure-pipelines-conda.yml
@@ -16,12 +16,14 @@ jobs:
         displayName: Add conda to PATH
       - bash: sudo chown -R $USER $CONDA
         displayName: Take ownership of conda installation
+      - bash: conda install libarchive -n base -c conda-forge
+        displayName: Fix missing libarchive error
       - template: checkout.yml
       - template: conda-setup+build.yml
 
   - job: 'Windows_with_conda'
     pool:
-      vmImage: 'windows-2019'
+      vmImage: 'windows-latest'
     steps:
       - powershell: Write-Host "##vso[task.prependpath]$env:CONDA\Scripts"
         displayName: Add conda to PATH
