--- a/devtools/azure-pipelines-conda.yml
+++ b/devtools/azure-pipelines-conda.yml
@@ -16,7 +16,7 @@ jobs:
         displayName: Add conda to PATH
       - bash: sudo chown -R $USER $CONDA
         displayName: Take ownership of conda installation
-      - bash: conda install libarchive -n base -c conda-forge
+      - bash: conda install --yes --quiet libarchive -n base -c conda-forge
         displayName: Fix missing libarchive error
       - template: checkout.yml
       - template: conda-setup+build.yml
@@ -27,5 +27,7 @@ jobs:
     steps:
       - powershell: Write-Host "##vso[task.prependpath]$env:CONDA\Scripts"
         displayName: Add conda to PATH
+      - bash: conda install --yes --quiet libarchive -n base -c conda-forge
+        displayName: Fix missing libarchive error
       - template: checkout.yml
       - template: conda-setup+build.yml
