--- a/devtools/azure-pipelines-conda.yml
+++ b/devtools/azure-pipelines-conda.yml
@@ -41,20 +41,16 @@ jobs:
         displayName: Add conda to PATH
       - script: |
           call activate base
-          conda.exe install "python=3.10" conda-build conda pip boa -c conda-forge --strict-channel-priority --yes
+          conda.exe config --add channels conda-forge
+          conda.exe config --set always_yes true
+          conda.exe config --set quiet true
+          conda.exe install conda-build libarchive conda pip
+          conda.exe update --all
         displayName: Install conda-build
       - script: set PYTHONUNBUFFERED=1
         displayName: Set PYTHONUNBUFFERED
       - template: checkout.yml
       - bash: |
-          conda.exe config --add channels conda-forge
-          conda.exe config --set always_yes true
-          conda.exe config --set quiet true
-          conda.exe install python-libarchive-c
-          conda.exe install numpy
-          conda.exe install libarchive -c conda-forge --strict-channel-priority --yes
-        displayName: Configure conda
-      - bash: |
-          conda.exe build devtools --python 3.10
+          conda.exe build devtools --python 3.11
         displayName: 'Build and test'
         continueOnError: false
