--- a/devtools/azure-pipelines-conda.yml
+++ b/devtools/azure-pipelines-conda.yml
@@ -1,32 +1,58 @@
 jobs:
-- job: 'Linux_with_conda'
-  pool:
-    vmImage: 'Ubuntu-22.04'
-  steps:
-    - bash: echo "##vso[task.prependpath]$CONDA/bin"
-      displayName: Add conda to PATH
-    - template: checkout.yml
-    - template: conda-setup+build.yml
+  - job: 'Linux_with_conda'
+    pool:
+      vmImage: 'Ubuntu-22.04'
+    steps:
+      - bash: echo "##vso[task.prependpath]$CONDA/bin"
+        displayName: Add conda to PATH
+      - template: checkout.yml
+      - template: conda-setup+build.yml
 
-- job: 'MacOS_with_conda'
-  pool:
-    vmImage: 'macOS-12'
-  steps:
-    - bash: echo "##vso[task.prependpath]$CONDA/bin"
-      displayName: Add conda to PATH
-    - bash: sudo chown -R $USER $CONDA
-      displayName: Take ownership of conda installation
-    - template: checkout.yml
-    - template: conda-setup+build.yml
+  - job: 'MacOS_with_conda'
+    pool:
+      vmImage: 'macOS-latest'
+    steps:
+      - bash: echo "##vso[task.prependpath]$CONDA/bin"
+        displayName: Add conda to PATH
+      - bash: sudo chown -R $USER $CONDA
+        displayName: Take ownership of conda installation
+      - bash: conda install --yes --quiet libarchive -n base -c conda-forge
+        displayName: Fix missing libarchive error
+      - template: checkout.yml
+      - template: conda-setup+build.yml
 
-- job: 'Windows_with_conda'
-  pool:
-    vmImage: 'windows-2019'
-  steps:
-    - task: BatchScript@1
-      inputs:
-        filename: "$(CONDA)\\Scripts\\activate.bat"
-        modifyEnvironment: True
-      displayName: Add conda to PATH
-    - template: checkout.yml
-    - template: conda-setup+build.yml
+  - job: 'Windows_with_conda'
+    pool:
+      vmImage: 'windows-latest'
+    steps:
+      - task: PythonScript@0
+        displayName: 'Download Miniforge'
+        inputs:
+          scriptSource: inline
+          script: |
+            import urllib.request
+            url = 'https://github.com/conda-forge/miniforge/releases/latest/download/Miniforge3-Windows-x86_64.exe'
+            path = r"$(Build.ArtifactStagingDirectory)/Miniforge.exe"
+            urllib.request.urlretrieve(url, path)
+      - script: |
+          start /wait "" %BUILD_ARTIFACTSTAGINGDIRECTORY%\Miniforge.exe /InstallationType=JustMe /RegisterPython=0 /S /D=C:\Miniforge
+        displayName: Install Miniforge
+      - powershell: Write-Host "##vso[task.prependpath]C:\Miniforge\Scripts"
+        displayName: Add conda to PATH
+      - script: |
+          call activate base
+          conda.exe config --add channels conda-forge
+          conda.exe config --set always_yes true
+          conda.exe config --set quiet true
+          conda.exe install conda-build libarchive conda pip
+          conda.exe update --all
+          conda update -n base conda
+        displayName: Install conda-build
+      - script: set PYTHONUNBUFFERED=1
+        displayName: Set PYTHONUNBUFFERED
+      - template: checkout.yml
+      #- bash: |
+      #    # call activate base
+      #    # conda build devtools --python 3.11
+      #  displayName: 'Build and test'
+      #  continueOnError: false
