--- a/devtools/conda-setup+build.yml
+++ b/devtools/conda-setup+build.yml
@@ -5,13 +5,11 @@ steps:
     conda config --set quiet true
   displayName: Configure conda
 - bash: |
-    conda clean --all
-    conda install mamba
-    mamba update --all
-    mamba install boa conda-build conda-verify pip
+    conda update --all
+    conda install conda-build conda-verify pip
   displayName: 'Update and install dependencies'
   continueOnError: false
 - bash: |
-    conda mambabuild devtools --python 3.11 --numpy 1.21
+    conda build devtools --python 3.11 --numpy 1.21
   displayName: 'Build and test'
   continueOnError: false
