--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ requires-python = ">= 3.8"
 dependencies = [
     'numpy>=1.20',
     'scipy>=1.9.0',
-    'scikit-learn>=1.1',
+    'scikit-learn<=1.2.2',
     'threadpoolctl>=3.1.0'
 ]
 dynamic = ['version']
