--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ authors = [
 ]
 requires-python = ">= 3.8"
 dependencies = [
-    'numpy>=2',
+    'numpy',
     'scipy>=1.9.0',
     'scikit-learn>=1.5.0',
     'threadpoolctl>=3.1.0'
@@ -40,7 +40,7 @@ deep-learning = ['torch']
 plotting = ['matplotlib', 'networkx']
 units = ['pint>=0.20']
 tests = [
-    'torch>=1.12.0; platform_system!="Darwin" and python_version<"3.11"',
+    'torch>=1.12.0; platform_system!="Darwin"',
     'pytest>=7.1.2',
     'pytest-cov>=3.0.0',
     'coverage[toml]',
@@ -77,7 +77,7 @@ requires = [
     "scikit-build>=0.16",
     "cython>=0.29.30",
     "pybind11>=2.10.1",
-    "numpy>=2",
+    "numpy",
     "cmake>=3.24",
     "tomli; python_version < '3.11'",
     "scipy>=1.9.3",
