numpy2 support, drop py38 (#295)

--- a/devtools/azure-pipelines-conda.yml
+++ b/devtools/azure-pipelines-conda.yml
@@ -10,14 +10,12 @@ jobs:
 
   - job: 'MacOS_with_conda'
     pool:
-      vmImage: 'macOS-latest'
+      vmImage: 'macOS-12'
     steps:
       - bash: echo "##vso[task.prependpath]$CONDA/bin"
         displayName: Add conda to PATH
       - bash: sudo chown -R $USER $CONDA
         displayName: Take ownership of conda installation
-      - bash: conda install --yes --quiet libarchive sqlite -n base -c conda-forge
-        displayName: Fix missing sqlite and libarchive error
       - template: checkout.yml
       - template: conda-setup+build.yml
 
