--- a/devtools/azure-pipelines-conda.yml
+++ b/devtools/azure-pipelines-conda.yml
@@ -14,8 +14,8 @@ jobs:
     steps:
       - bash: echo "##vso[task.prependpath]$CONDA/bin"
         displayName: Add conda to PATH
-      - bash: sudo chown -R $USER $CONDA
-        displayName: Take ownership of conda installation
+      #- bash: sudo chown -R $USER $CONDA
+      #  displayName: Take ownership of conda installation
       - template: checkout.yml
       - template: conda-setup+build.yml
 
